query button visible; cleaning; reset span button; reset fixes
git-svn-id: https://geneontology.svn.sourceforge.net/svnroot/geneontology/AmiGO/trunk@4605 6f0e8829-b336-0410-acfb-cb9b228023ad

--- a/css/formatting.css
+++ b/css/formatting.css
@@ -531,6 +531,12 @@ class. */
  * Some stuff for GOlr
  */
 
+/* Actually make the input box visible given all of the stuff above. */
+.golr-ui-input {
+    border: 1px;
+    border-style: solid;
+}
+
 /* Filter box issues. */
 .golr-embiggen {
     height: 40em;
